# trading-system

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  install_task.ps1  pyproject.toml  render.yaml  requirements.txt  scan_market_once.bat  scan_news_once.bat  server.log.err  start_api.bat  start_persistent.bat  start_public.bat  trading-system-url.txt  trading-system-url.txt.history.txt  tunnel.log.err  tunnel_persistent.bat  tunnel_persistent.ps1
.claude/: launch.json
_tmp/: script.js
app/: __init__.py  cli.py  main.py
app/alerts/: __init__.py  telegram.py
app/api/: admin.py  ai_chat.py  alerts_portfolio.py  analysts.py  billing.py  digest.py  journal.py  legal.py  me.py  news.py  notifications.py  schemas.py  signals.py  stats.py  stocks.py  system.py
app/auth/: __init__.py  deps.py  plans.py  router.py  security.py
app/core/: __init__.py  config.py  email.py  logging.py  security.py
app/enrichment/: __init__.py  glossary.py  summarizer.py  translator.py
app/reports/: __init__.py  html.py  markdown.py
app/scanners/market/: __init__.py  indicators.py  monitor.py  service.py  signal.py  universe.py
app/scanners/news/: __init__.py  accounts.py  filter.py  (+6 more)
app/scheduler/: __init__.py  jobs.py
app/storage/: __init__.py  db.py  models.py  repository.py
docs/: current_url.txt  index.html
scripts/: backfill_hebrew.py  backfill_symbols.py  backup_db.ps1  backup_db.py  install_backup_task.ps1  migrate_old_signals.py  retranslate_news.py
tests/: test_glossary.py  test_indicators.py  test_news_filter.py  test_universe.py
(+4 files in other folders)
