[project]
name = "trading-system"
version = "0.1.0"
description = "מערכת מאוחדת: סריקת חדשות שוק אמריקאי + סיגנלי מסחר טכניים + דשבורד"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
